huayra-stopmotion (0.46) UNRELEASED; urgency=medium

  [ Ivan Hoffmann ]
  * Nuevos presets de exportación de video: Vimeo 640x480, WebM, MPEG 2,
    XVid4, H264 Sin Pérdida (lento y rápido).
  * Implementación de la opción de escala al exportar (excepto YouTube y
    Vimeo).
  * Mejora en comando de miniaturas.
  [ Mauro ]
  * 

 -- Mauro <mauro@sdf.org>  Fri, 12 Dec 2014 16:44:49 -0300

huayra-stopmotion (0.45) unstable; urgency=low

  * Resolviendo el bug que mostraba imagenes por la mitad. 

 -- Hugo Ruscitti <hugoruscitti@gmail.com>  Wed, 19 Nov 2014 17:17:20 +0100

huayra-stopmotion (0.44) unstable; urgency=low

  * Reparando el problema de guardado de proyectos cuando las particiones /tmp
    y destino están en diferentes particiones.
  * Simplificando el uso de multiples capas.
  * Reparando el problema de cache que originaba que se vieran imágenes que ya
    habían sido eliminadas.

 -- Hugo Ruscitti <hugoruscitti@gmail.com>  Wed, 12 Nov 2014 16:18:50 +0100

huayra-stopmotion (0.43) unstable; urgency=low

  * Incorporando libav-tools como paquete opcional a ffmpeg.

 -- Hugo Ruscitti <hugoruscitti@gmail.com>  Fri, 17 Oct 2014 15:55:53 +0200

huayra-stopmotion (0.42) unstable; urgency=low

  * Arreglo menor. 

 -- Hugo Ruscitti <hugoruscitti@gmail.com>  Thu, 26 Jun 2014 15:27:30 +0200

huayra-stopmotion (0.41) unstable; urgency=low

  * Agregando archivo de versión.

 -- Hugo Ruscitti <hugoruscitti@gmail.com>  Mon, 23 Jun 2014 20:36:18 +0200

huayra-stopmotion (0.40) unstable; urgency=low

  * Actualizando el indicador de versión.
  * Actualizaciones generales.

 -- Hugo Ruscitti <hugoruscitti@gmail.com>  Mon, 23 Jun 2014 17:33:36 +0200

huayra-stopmotion (0.30) unstable; urgency=low

  * Actualizando iconos y mostrando la versión. 

 -- Hugo Ruscitti <hugoruscitti@gmail.com>  Fri, 11 Apr 2014 23:32:20 +0200

huayra-stopmotion (0.29) unstable; urgency=low

  * Actualizando los efectos sobre el canvas.
